--- a/index.html
+++ b/index.html
@@ -11,23 +11,19 @@
       <input type="text" id="name" placeholder="buyers name" required><br><br><br>
       <label for="state">state</label><br>
       <input type="text" id="state" placeholder="state" required><br><br><br>
+<table>
+      <tr>
+        
+          <th>product Name</th>
+          <th>Price</th>
+          <th>quantity</th>
+        </tr></table>
 
-      <hr>
-        <section>
-          <h2>products name</h2>
-          <article class="item">
-            <p class="flavor">twisties</p><p class="price">3.00</p>
-          </article>
-          <article class="item">
-            <p class="flavor">cadburys chocolate</p><p class="price">3.45</p>
-          </article>
-          <article class="item">
-          <p class="flavor">cadburys nut chocolate</p><p class="price">4.50</p>
-        </article>
-        <article class="item">
-        <p class="flavor">cloud 9</p><p class="price">0.30</p>
-      </article>
+        <th>twisties</th>
+          <th>Pe</th>
+          <th>quantity</th>
 
+        
       <h1>Payment's Method:</h1>
       <label for="gender">what is your gender</label><br>
 <input type="radio" name="cash" value="cash">cash
